<?xml version="1.0"?>
<package>
  <name>graph_slam</name>
  <version>0.0.0</version>
  <description>graph_slam</description>
  <maintainer email="jdservos@todo.todo">jdservos</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>mls</build_depend>
  <build_depend>ccicp2d</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>ground_segmentation</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>nasa_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>mls</run_depend>
  <run_depend>ccicp2d</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>ground_segmentation</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>nasa_msgs</run_depend>

  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->
  </export>
</package>
