<?xml version="1.0"?>
<package>
  <name>local_mapper</name>
  <version>0.0.0</version>
  <description>local_mapper</description>
  <maintainer email="jdservos@todo.todo">jdservos</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>graph_slam</build_depend>
  <build_depend>ekf</build_depend>
  <build_depend>global_matching</build_depend>
  <build_depend>nasa_msgs</build_depend>
  <build_depend>mls</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>ground_segmentation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>graph_slam</run_depend>
  <run_depend>ekf</run_depend>
  <run_depend>global_matching</run_depend>
  <run_depend>nasa_msgs</run_depend>
  <run_depend>mls</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>ground_segmentation</run_depend>

  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->
  </export>
</package>
